--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -531,7 +531,7 @@ button.search-sidebar:hover {
 
 .btn_login_form{
  
-  background: #6a3137 !important;
+  background: #174C7C !important;
   color: #ffff!important;
   font-size: 30px;
   font-weight: 800;
@@ -552,7 +552,7 @@ button.search-sidebar:hover {
   line-height: 1.36;
   letter-spacing: normal;
   text-align: center;
-  color: #6a3137;
+  color: #174C7C;
 }
 
 .login-label p{
@@ -570,7 +570,7 @@ button.search-sidebar:hover {
 
 a.login {
   background: #fff !important;
-  color: #6a3137!important;
+  color: #174C7C!important;
   /*border: 2px solid #4db849 !important;*/
   border:none;
   font-size: 30px;
@@ -584,7 +584,7 @@ a.login {
 }
 
 a.login:hover {
-  background: #5D2B30  !important;
+  background: #174C7C  !important;
   color: #fff !important;
 }
 
@@ -611,7 +611,7 @@ a.register:hover {
 
  #log .logout {
   background: #fff !important;
-  color: #6a3137!important;
+  color: #174C7C!important;
   /*border: 2px solid #4db849 !important;*/
   border:none;
   font-size: 30px;
@@ -625,7 +625,7 @@ a.register:hover {
 }
 
 #log .logout:hover {
-  background: #5D2B30  !important;
+  background: #174C7C  !important;
   color: #fff !important;
 }
 
